--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node main.js",
     "start": "node main.js",
-    "worker": "node main.js"
+    "worker": "npm start"
   },
   "author": "donkuray",
   "license": "ISC"
